Configure for production

--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "author": "Adam Zerner <adamzerner@protonmail.com>",
   "license": "MIT",
   "dependencies": {
+    "compression": "^1.7.4",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-sslify": "^1.2.0",
+    "helmet": "^3.23.2",
     "mongoose": "^5.9.20"
   },
   "scripts": {
