--- a/package.json
+++ b/package.json
@@ -7,14 +7,22 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
+    "connect-mongo": "^3.2.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-mongo-sanitize": "^2.0.0",
+    "express-session": "^1.17.1",
     "express-sslify": "^1.2.0",
     "helmet": "^3.23.2",
-    "mongoose": "^5.9.20"
+    "mongoose": "^5.9.20",
+    "nodemailer": "^6.4.10",
+    "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-linkedin-oauth2": "^2.0.0",
+    "passport-local": "^1.0.0",
+    "passport-twitter": "^1.0.4"
   },
   "scripts": {
     "start": "node init/app.js",
