--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 PORT=3000
 NODE_ENV=development
 MONGODB_URI=mongodb://localhost/node-starter
+EXPRESS_SESSION_SECRET=foobar
+BASE_API_URL=http://localhost:3000
+BASE_CLIENT_URL=http://localhost:8080
