--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-linkedin-oauth2": "^2.0.0",
     "passport-local": "^1.0.0",
-    "passport-twitter": "^1.0.4"
+    "passport-twitter": "^1.0.4",
+    "stripe": "^8.67.0"
   },
   "scripts": {
     "start": "node init/app.js",
