Finish Stripe stuff

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "scripts": {
     "start": "node init/app.js",
-    "start-db": "mongod --dbpath ~/data/db"
+    "start-db": "mongod --dbpath ~/data/db",
+    "forward-stripe-webhook": "stripe listen --forward-to localhost:3000/user/checkout-webhook"
   }
 }
